--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/press-start-2p": "^0.2.3",
     "expo": "~52.0.37",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7"
